--- a/services.html
+++ b/services.html
@@ -2,18 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Dhanisha Tech – Services</title>
+  <title>Services – Dhanisha Tech</title>
   <link rel="stylesheet" href="css/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-
 <body>
-  <!-- ✅ Navbar -->
   <nav class="navbar">
     <div class="logo">🌀 Dhanisha Tech</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
+      <li><a href="services.html" class="active">Services</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
       <li><a href="offers.html">Offers</a></li>
       <li><a href="pricing.html">Pricing</a></li>
@@ -23,29 +21,29 @@
     </ul>
   </nav>
 
-  <!-- ✅ Services -->
-  <section id="services">
+  <div class="page-banner">
     <h1>Our Services</h1>
-    <div class="services-container">
-      <div class="service-card">
-        <div class="icon">📱</div>
-        <h3>Android App Development</h3>
-        <p>Custom Android apps using Kotlin/Flutter. Play Store ready.</p>
-      </div>
-      <div class="service-card">
-        <div class="icon">🌐</div>
-        <h3>Website Development</h3>
-        <p>Responsive websites with SEO & modern UI using HTML/CSS or React.</p>
-      </div>
-      <div class="service-card">
-        <div class="icon">💻</div>
-        <h3>Desktop Software</h3>
-        <p>Reliable automation tools for Windows and Linux in Python/Java.</p>
-      </div>
+    <p>Explore what we offer for your business success.</p>
+  </div>
+
+  <section class="services-container">
+    <div class="service-card">
+      <div class="icon">📱</div>
+      <h3>Android App Development</h3>
+      <p>Custom Android apps using Kotlin/Flutter. Play Store ready.</p>
+    </div>
+    <div class="service-card">
+      <div class="icon">🌐</div>
+      <h3>Website Development</h3>
+      <p>Responsive websites with SEO & modern UI using HTML/CSS or React.</p>
+    </div>
+    <div class="service-card">
+      <div class="icon">💻</div>
+      <h3>Desktop Software</h3>
+      <p>Reliable automation tools for Windows and Linux in Python/Java.</p>
     </div>
   </section>
 
-  <!-- ✅ Footer -->
   <footer>
     <div class="footer-links">
       <a href="about.html">About</a>
