--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
+
+  <!-- ✅ Navbar -->
   <nav class="navbar">
     <div class="logo">🌀 Dhanisha Tech</div>
     <ul class="nav-links">
@@ -21,11 +23,13 @@
     </ul>
   </nav>
 
-  <div class="page-banner">
+  <!-- ✅ Page Banner -->
+  <section class="hero page-banner">
     <h1>Contact Us</h1>
     <p>Let’s connect and discuss your project idea.</p>
-  </div>
+  </section>
 
+  <!-- ✅ Contact Form -->
   <section class="contact-section">
     <form class="contact-form">
       <input type="text" placeholder="Your Name" required />
@@ -40,6 +44,7 @@
     </div>
   </section>
 
+  <!-- ✅ Footer -->
   <footer>
     <div class="footer-links">
       <a href="about.html">About</a>
@@ -49,5 +54,6 @@
     </div>
     <p>&copy; 2025 Dhanisha Tech. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
