--- a/login.html
+++ b/login.html
@@ -6,7 +6,10 @@
   <link rel="stylesheet" href="css/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
+
 <body>
+
+  <!-- ✅ Navbar -->
   <nav class="navbar">
     <div class="logo">🌀 Dhanisha Tech</div>
     <ul class="nav-links">
@@ -21,11 +24,13 @@
     </ul>
   </nav>
 
-  <div class="page-banner">
+  <!-- ✅ Page Banner -->
+  <section class="hero page-banner">
     <h1>Login</h1>
     <p>Choose your role and sign in to your dashboard.</p>
-  </div>
+  </section>
 
+  <!-- ✅ Login Form -->
   <section class="login-section">
     <form class="login-form">
       <label for="role">Select Role:</label>
@@ -42,6 +47,7 @@
     </form>
   </section>
 
+  <!-- ✅ Footer -->
   <footer>
     <div class="footer-links">
       <a href="about.html">About</a>
@@ -51,5 +57,6 @@
     </div>
     <p>&copy; 2025 Dhanisha Tech. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
