--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
   <title>Contact Us – Dhanisha Tech</title>
   <link rel="stylesheet" href="css/style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- 🔐 Role protection script -->
+  <script src="js/auth-check.js"></script>
+  <script>requireRole("Client");</script> <!-- ✅ Only Client can access -->
 </head>
 <body>
 
