--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
+
+  <!-- ✅ Navbar -->
   <nav class="navbar">
     <div class="logo">🌀 Dhanisha Tech</div>
     <ul class="nav-links">
@@ -17,11 +19,13 @@
     </ul>
   </nav>
 
+  <!-- ✅ Page Banner -->
   <div class="page-banner">
     <h1>Welcome</h1>
     <p>Please login or create an account</p>
   </div>
 
+  <!-- ✅ Login / Signup Form -->
   <section class="login-section">
     <form class="login-form" id="authForm">
       <label for="authType">Action:</label>
@@ -41,10 +45,12 @@
       <input type="text" id="name" placeholder="Name (Signup only)" />
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Password" required />
+
       <button type="submit">Continue</button>
     </form>
   </section>
 
+  <!-- ✅ Footer -->
   <footer>
     <div class="footer-links">
       <a href="about.html">About</a>
@@ -54,6 +60,8 @@
     <p>&copy; 2025 Dhanisha Tech. All rights reserved.</p>
   </footer>
 
+  <!-- ✅ Script -->
   <script src="js/login.js"></script>
+
 </body>
 </html>
